Fixes and improvements (#19)
* Fixes and improvements.

- Added section-background CSS variable to common.css for when more content is eventually added to landing page.
- Changed section background color so it doesn't look like a button.
- Fixed margin issues in downloads page by introducing new IDs to some HTML elements.
- Removed scrollbar buttons from taking empty space by setting it to display: none
- Reduced scrollbar track's border radius to 0 so it doesn't have black corners on top and bottom.
- Increase logo brightness in dark mode.
- Increased content width in landing page.
- Aligned hero content to a grid so its in line with the rest of the page content.
- Feature text now uses 100% width of its container and is also in line with page content.
- Hero background image now uses 100% viewport width.

* New font and fixes

- Removed link visited color change on header links
- Added fixed scale to header picture element to fix misalignment
- Replace global font with Inter
- Reduced footer font-size to reflect new font family.
- Fixed social links not properly becoming a list on mobile.
- Made footer span have consistent width as rest of page contents.
- Fixed about__info element not using 100% width on mobile

* Requested changes

* Update faq.css

--- a/assets/common.css
+++ b/assets/common.css
@@ -1,6 +1,10 @@
+/* Global fonts */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
   --body-color: hsl(0deg, 100%, 100%);
-  --accent-background: hsl(222deg, 100%, 98%);
+  --accent-background: hsl(222, 100%, 98%);
+  --section-background: hsla(209, 78%, 48%, 0.4);
   --accent-light: hsl(222deg, 100%, 95%);
   --accent-normal: hsl(222deg, 100%, 90%);
   --accent-dark: hsl(226deg 100% 85%);
@@ -20,7 +24,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 14px;
 }
 
 #toc::-webkit-scrollbar {
@@ -29,11 +33,10 @@
 
 ::-webkit-scrollbar-track {
   background: var(--accent-light);
-  border-radius: 20px;
 }
 
 ::-webkit-scrollbar-button {
-  visibility: hidden;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -62,14 +65,17 @@
 
 html,
 body {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   line-height: 1.2;
-  font-weight: 400;
   background-color: var(--body-color);
   color: var(--text-color);
   scroll-behavior: smooth;
   scroll-padding-top: 60px;
   margin: 0;
+}
+
+p {
+  font-weight: 300;
 }
 
 /* Header */
@@ -102,7 +108,7 @@ header>a {
   font-weight: 700;
   transition: background 0.4s ease;
   background-color: hsla(149, 75%, 51%, 0);
-  padding: 6px;
+  padding: 6px 10px 6px 6px;
   border-radius: 24px;
 }
 
@@ -111,9 +117,17 @@ header>a:hover {
   background-color: hsla(149, 75%, 51%, 0.4);
 }
 
-.lawnchair__logo img {
+header a, header a:visited, header a:hover, header a:active {
+  color: inherit;
+}
+
+.lawnchair__logo img, .lawnchair__logo picture {
   height: 30px;
   width: 30px;
+}
+
+.lawnchair__logo span {
+  font-weight: 600;
 }
 
 header nav {
@@ -153,14 +167,15 @@ footer span {
   margin: auto;
   background-color: var(--footer-color--darker);
   border-radius: 20px;
-  width: 80%;
+  width: 90%;
   padding: 10px 20px;
   max-width: 840px;
+  font-size: .9em;
 }
 
 footer a,
 footer a:visited {
-  font-weight: 450;
+  font-weight: 500;
   color: var(--text-color);
   text-decoration: none;
 }
